manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: sample-istio-app
spec:
  hosts:
  - "*"
  gateways:
  - sample-istio-gateway
  http:
  - route:
    - destination:
        host: nginx-service.sample-istio-app.svc.cluster.local
        port:
          number: 80
